replace mistakenly removed section border, spacing fixes

--- a/civictechprojects/static/css/partials/_MainFooter.scss
+++ b/civictechprojects/static/css/partials/_MainFooter.scss
@@ -8,7 +8,11 @@
   h2, h3 {
     margin-bottom: 0; // margin spacing is handled elsewhere in this section
   }
+}
+.MainFooter-border {
   border-top: 1px solid $color-border-weak;
+  height: 1px;
+  width: 100%;
 }
 .MainFooter-item {
   padding: 20px 0;
